--- a/vessel-service/Dockerfile
+++ b/vessel-service/Dockerfile
@@ -8,7 +8,7 @@ COPY go.* ./
 RUN go mod download
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o /go/bin/server
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /go/bin/server -a -installsuffix cgo main.go repository.go handler.go datastore.go
 
 FROM scratch as release
 COPY --from=builder /go/bin/server /go/bin/server
