--- a/vessel-service/Makefile
+++ b/vessel-service/Makefile
@@ -3,4 +3,8 @@ build:
 	docker build -t vessel-service .
 
 run:
-	docker run -p 50052:50051 -e MICRO_SERVER_ADDRESS=:50051 -e MICRO_REGISTRY=mdns vessel-service
+	docker run -d --net="host" \
+		-p 50053 \
+		-e MICRO_SERVER_ADDRESS=:50053 \
+		-e MICRO_REGISTRY=mdns \
+		vessel-service
