--- a/consignment-service/Makefile
+++ b/consignment-service/Makefile
@@ -3,4 +3,9 @@ build:
 	docker build -t consignment-service .
 
 run:
-	docker run -p 50051:50051 -e MICRO_SERVER_ADDRESS=:50051 -e MICRO_REGISTRY=mdns consignment-service
+	docker run -d --net="host" \
+		-p 50052 \
+		-e MICRO_SERVER_ADDRESS=:50052 \
+		-e MICRO_REGISTRY=mdns \
+		-e DISABLE_AUTH=true \
+		consignment-service
