--- a/user-service/Makefile
+++ b/user-service/Makefile
@@ -1,6 +1,13 @@
 build:
-	protoc --micro_out=. --go_out=. ./proto/user/user.proto
+	protoc --micro_out=. --go_out=. ./proto/auth/auth.proto
 	docker build -t user-service .
 
 run:
-	docker run -p 50053:50051 -e MICRO_SERVER_ADDRESS=:50051 -e MICRO_REGISTRY=mdns user-service
+	docker run --net="host" \
+		-p 50051 \
+		-e DB_HOST=localhost \
+		-e DB_PASS=password \
+		-e DB_USER=postgres \
+		-e MICRO_SERVER_ADDRESS=:50051 \
+		-e MICRO_REGISTRY=mdns \
+		user-service
