--- a/user-cli/Makefile
+++ b/user-cli/Makefile
@@ -2,4 +2,6 @@ build:
 	docker build -t user-cli .
 
 run:
-	docker run -e MICRO_REGISTRY=mdns user-cli
+	docker run --net="host" \
+		-e MICRO_REGISTRY=mdns \
+		user-cli
