--- a/consignment-cli/Makefile
+++ b/consignment-cli/Makefile
@@ -2,4 +2,6 @@ build:
 	docker build -t consignment-cli .
 
 run:
-	docker run -e MICRO_REGISTRY=mdns consignment-cli
+	docker run --net="host" \
+		-e MICRO_REGISTRY=mdns \
+		consignment-cli
