--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,15 @@ version: '3.1'
 
 services:
 
-  consignment-cli:
-    build: ./consignment-cli
-    environment:
-      MICRO_REGISTRY: "mdns"
+  # consignment-cli:
+  #   build: ./consignment-cli
+  #   environment:
+  #     MICRO_REGISTRY: "mdns"
 
-  user-cli:
-    build: ./user-cli
-    environment:
-      MICRO_REGISTRY: "mdns"
+  # user-cli:
+  #   build: ./user-cli
+  #   environment:
+  #     MICRO_REGISTRY: "mdns"
 
   consignment-service:
     build: ./consignment-service
@@ -42,6 +42,14 @@ services:
       DB_PORT: "5432"
       DB_USER: "postgres"
       DB_PASSWORD: "postgres"
+
+  email-service:
+    build: ./email-service
+    ports:
+      - 50054:50051
+    environment:
+      MICRO_ADDRESS: ":50051"
+      MICRO_REGISTRY: "mdns"
 
   datastore:
     image: mongo
