--- a/consignment-service/Makefile
+++ b/consignment-service/Makefile
@@ -1,6 +1,7 @@
 build:
 	protoc --micro_out=. --go_out=. ./proto/consignment/consignment.proto
-	docker build -t consignment-service .
+	docker build -t tsicg/consignment-service .
+	docker push tsicg/consignment-service:latest
 
 run:
 	docker run -d --net="host" \
@@ -8,4 +9,8 @@ run:
 		-e MICRO_SERVER_ADDRESS=:50052 \
 		-e MICRO_REGISTRY=mdns \
 		-e DISABLE_AUTH=true \
-		consignment-service
+		tsicg/consignment-service:latest
+
+deploy:
+	sed "s/{{ UPDATED_AT }}/$(shell date)/g" ./deployments/deployment.tmpl > ./deployments/deployment.yml
+	kubectl replace -f ./deployments/deployment.yml
